# achensticum

./: index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.vue  Main.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  pinia.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: index.css
src/assets/locales/: en.json  es.json
src/components/: CollapsibleSorted.vue  Configure.vue  DarkMode.vue  DataTable.vue  LangSelect.vue  MultiAdd.vue  Results.vue  StatisticTable.vue
src/components/graphs/: FreqPolygon.vue  Histogram.vue
src/components/visual/: Title.vue  WelcomeModal.vue
src/lib/: datatable.ts
src/stores/: PersistentStorage.ts  Statistics.ts
