[package]
name = "achensticum"
version = "0.1.0"
description = "A Statistics App"
authors = ["GaryCraft", "GenericPsycho"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "achensticum_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-pinia = "1.1.1"
tauri-plugin-fs = "2"
